objects/Case.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Case_Type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>4 MAN DELIVERY JOB</fullName>
                </value>
                <value>
                    <fullName>Account information update or question</fullName>
                </value>
                <value>
                    <fullName>Add Item to List</fullName>
                </value>
                <value>
                    <fullName>Add promotion code after purchase</fullName>
                </value>
                <value>
                    <fullName>Address Change Required</fullName>
                </value>
                <value>
                    <fullName>Allowance Request</fullName>
                </value>
                <value>
                    <fullName>Appliance Claim</fullName>
                </value>
                <value>
                    <fullName>Archived Accounts</fullName>
                </value>
                <value>
                    <fullName>Associate Loyalty Issue</fullName>
                </value>
                <value>
                    <fullName>Back Ordered Report</fullName>
                </value>
                <value>
                    <fullName>Better Business Bureau</fullName>
                </value>
                <value>
                    <fullName>Borderfree</fullName>
                </value>
                <value>
                    <fullName>Broken/Damaged Item</fullName>
                </value>
                <value>
                    <fullName>BTO</fullName>
                </value>
                <value>
                    <fullName>CA - Cancellation</fullName>
                </value>
                <value>
                    <fullName>Call Tag</fullName>
                </value>
                <value>
                    <fullName>Can I cancel my order?</fullName>
                </value>
                <value>
                    <fullName>Can I change my order?</fullName>
                </value>
                <value>
                    <fullName>Can you reactivate my gift card?</fullName>
                </value>
                <value>
                    <fullName>CASL Issue</fullName>
                </value>
                <value>
                    <fullName>Casper Mattress</fullName>
                </value>
                <value>
                    <fullName>Clear D</fullName>
                </value>
                <value>
                    <fullName>Credit Hold</fullName>
                </value>
                <value>
                    <fullName>Credit Points Dispute</fullName>
                </value>
                <value>
                    <fullName>CS - Customer Service</fullName>
                </value>
                <value>
                    <fullName>Customer asked for Store Information (phone number / details)</fullName>
                </value>
                <value>
                    <fullName>Customer Care Followup Alert</fullName>
                </value>
                <value>
                    <fullName>Customer Care Follow-Up Alerts (CCFU)</fullName>
                </value>
                <value>
                    <fullName>Customer preferred placing order over phone</fullName>
                </value>
                <value>
                    <fullName>Customer Reschedule Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Less_than_48h__c</fullName>
        <description>Used in close case process</description>
        <formula>Now() - ClosedDate &lt;2</formula>
        <label>Closed Less than 48h</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Community_Case_Type__c</fullName>
        <label>Topic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gifts</fullName>
                </value>
                <value>
                    <fullName>Hudson&apos;s Bay Rewards</fullName>
                </value>
                <value>
                    <fullName>Major Home Purchases</fullName>
                </value>
                <value>
                    <fullName>My Account</fullName>
                </value>
                <value>
                    <fullName>Order Status</fullName>
                </value>
                <value>
                    <fullName>Payment Methods</fullName>
                </value>
                <value>
                    <fullName>Returns</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Gift Cards</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Stores</fullName>
                </value>
                <value>
                    <fullName>Store Experience</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_Time__c</fullName>
        <formula>TIMEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Customer_Loyalty_Id__c</fullName>
        <label>Customer Loyalty Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Time_First_Closed__c</fullName>
        <description>Stamped the first time the case is closed. To be used in reporting</description>
        <label>Date/Time First Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_for_email_template__c</fullName>
        <description>today&apos;s date to use as merge field in email templates</description>
        <formula>today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date for email template</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Ago_Created__c</fullName>
        <formula>Today() - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Ago Created</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Closed__c</fullName>
        <formula>TODAY() - DATEVALUE(ClosedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_Method__c</fullName>
        <description>The delivery method for the Order associated to the Case</description>
        <label>Delivery Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Don_t_Send_Auto_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use in case loop prevention. Sets to true when auto response is sent the first time</description>
        <label>Don&apos;t Send Auto Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Executive_Email__c</fullName>
        <label>Executive Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Executive_Escalation_Owner__c</fullName>
        <description>Checkbox is used to determine when a case is owned by an executive services agent AND the case is an executive escalation. Used in automation to ignore ownership change trigger.</description>
        <formula>Owner:Queue.QueueName = &quot;Executive Escalation&quot;  ||   Owner:User.Profile.Name = &quot;HBC Executive Services&quot;</formula>
        <inlineHelpText>True when case is owned by Executive Escalation Queue or Profile Executive Services</inlineHelpText>
        <label>Executive Escalation Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Executive_Escalation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Email of the contact on the case when an executive escalation case is created.</description>
        <label>Executive Escalation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Status__c</fullName>
        <description>Used to display external status to community users.</description>
        <formula>CASE( TEXT(Status) , 
&quot;New&quot;, &quot;New&quot;,
&quot;In Progress&quot;, &quot;In Progress&quot;,
&quot;Awaiting Customer Response&quot;, &quot;Awaiting Customer Response&quot;,
&quot;Awaiting Internal Response&quot;, &quot;In Progress&quot;,
&quot;Team Assistance Needed&quot;, &quot;In Progress&quot;,
&quot;Awaiting Service Excellence Review&quot;, &quot;In Progress&quot;,
&quot;POS Team&quot;, &quot;In Progress&quot;,
&quot;Pending Fraud Team&quot;, &quot;In Progress&quot;,
&quot;Response Received&quot;, &quot;In Progress&quot;,
&quot;On Hold&quot;, &quot;On Hold&quot;,
&quot;Closed&quot;, &quot;Closed&quot;
,null)</formula>
        <label>External Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Tracker_Counter__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Count value of 1 used in reporting</description>
        <inlineHelpText>Count value of 1 used in reporting</inlineHelpText>
        <label>Field Tracker Counter</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Close_Biz_Days__c</fullName>
        <description>First Close Business Duration in Days</description>
        <formula>First_Close_Duration_Business__c /(3600 * 24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>First Close Business Duration in Days</inlineHelpText>
        <label>First Close Biz Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Close_Biz_Hours__c</fullName>
        <description>First Close Business Duration in Hours</description>
        <formula>First_Close_Duration_Business__c /3600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>First Close Business Duration in Hours</inlineHelpText>
        <label>First Close Biz Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Close_Biz_Min__c</fullName>
        <description>First Close Business Duration in Minutes</description>
        <formula>First_Close_Duration_Business__c /60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>First Close Business Duration in Minutes</inlineHelpText>
        <label>First Close Biz Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Close_Cal_Days__c</fullName>
        <description>First Close Calendar Duration in Days</description>
        <formula>First_Close_Duration_Calendar__c /(3600 * 24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>First Close Calendar Duration in Days</inlineHelpText>
        <label>First Close Cal Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Close_Cal_Hours__c</fullName>
        <description>First Close Calendar Duration in Hours</description>
        <formula>First_Close_Duration_Calendar__c /3600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>First Close Calendar Duration in Hours</inlineHelpText>
        <label>First Close Cal Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Close_Cal_Min__c</fullName>
        <description>First Close Calendar Duration in Minutes</description>
        <formula>First_Close_Duration_Calendar__c /60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>First Close Calendar Duration in Minutes</inlineHelpText>
        <label>First Close Cal Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Close_Date_Time__c</fullName>
        <label>First Close Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Close_Duration_Business__c</fullName>
        <defaultValue>0</defaultValue>
        <label>First Close Duration Business</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Close_Duration_Calendar__c</fullName>
        <defaultValue>0</defaultValue>
        <label>First Close Duration Calendar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Close_Owner__c</fullName>
        <description>The Case Owner for the first time the Case was set to a Closed type Status.</description>
        <inlineHelpText>The Case Owner for the first time the Case was set to a Closed type Status.</inlineHelpText>
        <label>First Close Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name_Extract__c</fullName>
        <description>Pulls the first name from the Web Name Field</description>
        <formula>IF( ISBLANK( SuppliedName ), Contact.FirstName , LEFT(SuppliedName,FIND(&quot; &quot;,SuppliedName)))</formula>
        <label>First Name Extract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Date__c</fullName>
        <description>When should we check back in on this case?</description>
        <inlineHelpText>When should we check back in on this case?</inlineHelpText>
        <label>Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Misses__c</fullName>
        <description>https://hbcdigital.atlassian.net/browse/UP2-140</description>
        <inlineHelpText>The count of times agents missed their follow up date.</inlineHelpText>
        <label>Follow Up Misses</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User who set the latest follow up</description>
        <label>Follow Up Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Follow_Up_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hour_of_Day_Closed__c</fullName>
        <description>Showing the hour of day that a case was closed  (Military Time) - For Reporting</description>
        <formula>TEXT(VALUE(MID (TEXT ( ClosedDate - (0.0417 * 4)), 12, 2))) + &quot;:00&quot;</formula>
        <label>Hour of Day Closed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hour_of_Day_Opened__c</fullName>
        <description>Showing the hour of day that a case was closed (Military Time) - For Reporting</description>
        <formula>TEXT(VALUE(MID (TEXT ( CreatedDate - (0.0417 * 4)), 12, 2))) + &quot;:00&quot;</formula>
        <label>Hour of Day Opened</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Ticket_Number__c</fullName>
        <label>IT Ticket Number</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IVR_Log__c</fullName>
        <description>Formatted Log of the IVR parameters that we get from the CTI</description>
        <inlineHelpText>Formatted Log of the IVR parameters that we get from the CTI</inlineHelpText>
        <label>IVR Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inactive_for_at_least_30_days__c</fullName>
        <description>Field used to flag that a case is open and has had no activity for 30 days.</description>
        <formula>TODAY()- DATEVALUE( LastModifiedDate ) &gt;= 30 
&amp;&amp; (NOT( ISPICKVAL(Status, &apos;Closed&apos;)  ||  ISPICKVAL(Status, &apos;Follow Up&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inactive for at least 30 days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Contact_Email__c</fullName>
        <description>Populated when email is sent and case set to Awaiting internal Response. Copied the To email to be used to send reminders.</description>
        <label>Internal Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Is_Follow_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in process to flag response received on follow-up cases.</description>
        <label>Is Follow Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_ORC_Open__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checks if any of the attached ORCs are open.</description>
        <label>Is ORC Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keep_Ownership__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Keep Ownership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Status_Change__c</fullName>
        <description>Stores the last time the status changed -- used by the Case Business Hours Tools package.</description>
        <label>Last Status Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_Agent_Extension__c</fullName>
        <description>The extension of the agent who most recently answered a call for this case</description>
        <externalId>true</externalId>
        <inlineHelpText>The extension of the agent who most recently answered a call for this case</inlineHelpText>
        <label>Latest Agent Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loyalty_Issue_Description__c</fullName>
        <label>Loyalty Issue Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loyalty_Tier__c</fullName>
        <formula>Contact.Tier_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loyalty Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medallia_Feedback_Main_Score__c</fullName>
        <formula>Medallia_Feedback_id__r.Response_Main_score__c</formula>
        <label>Medallia Feedback - Main Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medallia_Feedback_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link Case to a specific piece of feedback stored in the custom Medallia feedback object</description>
        <label>Medallia - Feedback id</label>
        <referenceTo>Medallia_Feedback__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Medallia_Medallia_internal_id__c</fullName>
        <description>Backend field to store the internal id of the record associated in Medallia with this Case</description>
        <label>Medallia - Medallia internal id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_for_Over_24h__c</fullName>
        <description>Used in reporting, checks if the Case has been open for 24 hours and is still in &quot;New&quot; status</description>
        <formula>(( NOW() -  CreatedDate ) &gt; 1 ) &amp;&amp; ISPICKVAL(Status, &apos;New&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New for Over 24h</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_Activity_on_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If 5 calendar days amount of time passes without activity, a case should be flagged. unless it is in Follow-Up or Response Required status.</description>
        <inlineHelpText>There is no activity on Case for more then 5 calendar days.</inlineHelpText>
        <label>No Activity on Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Agent_changes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No. Agent changes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Contact__c</fullName>
        <description>Look to see if a contact is associated to the case.</description>
        <formula>ISBLANK( ContactId )  ||  if (ISBLANK( ContactId )= False,  Contact.Invalid_Contact__c = TRUE, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Owner_changes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No. Owner changes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Queue_changes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No. Queue changes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Status_changes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No. Status changes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ORC_Closed_Count__c</fullName>
        <description>Number of closed ORC. Used in case closed process</description>
        <label>ORC Closed Count</label>
        <summaryFilterItems>
            <field>Order_Refund_Credit__c.ORC_Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Refund_Credit__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ORC_Count__c</fullName>
        <description>Excludes the ORC that require approval and declined</description>
        <label>Net ORC Count</label>
        <summaryFilterItems>
            <field>Order_Refund_Credit__c.ORC_Status__c</field>
            <operation>notEqual</operation>
            <value>Requires Approval, Declined, Draft</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Refund_Credit__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ORC_El_Salvador_Review__c</fullName>
        <description>This roll up is used to route wrap up to the Risk Support El Salvador queue.</description>
        <label>ORC El Salvador Review</label>
        <summaryFilterItems>
            <field>Order_Refund_Credit__c.Reason__c</field>
            <operation>equals</operation>
            <value>Defective Item, Missing Items, Price Adjustment, Price Match, Price Override, Promo Questions/Problem, Shipping Fee, Wrong Item Received, Wrong Order Received, Returns Not Received, Promo Code Gift Card, EGC to Account, Order Not Received</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Order_Refund_Credit__c.ORC_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed, Cancelled, Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Refund_Credit__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ORC_Gift_Card_Amount__c</fullName>
        <label>ORC Gift Card Amount</label>
        <summarizedField>Order_Refund_Credit__c.Refund_Gift_Card_Amount__c</summarizedField>
        <summaryForeignKey>Order_Refund_Credit__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ORC_Jackson_POS__c</fullName>
        <description>Roll up is used to automate Wrap Up to send a case to the Jackson Risk Support Queue</description>
        <label>ORC_Jackson_POS</label>
        <summaryFilterItems>
            <field>Order_Refund_Credit__c.Reason__c</field>
            <operation>equals</operation>
            <value>Promo Questions/Problem, Wrong Item Received, Wrong Order Received, Returns Not Received, Tax Exempt, Charge Customer</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Refund_Credit__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ORC_MNR_El_Salvador_Follow_Up__c</fullName>
        <description>Used to capture the need to route to the El Salvador team after a MNR review.</description>
        <label>ORC MNR El Salvador Follow Up</label>
        <summaryFilterItems>
            <field>Order_Refund_Credit__c.Reason__c</field>
            <operation>equals</operation>
            <value>Missing Items, Order Not Received</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Order_Refund_Credit__c.ORC_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Refund_Credit__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ORC_Missing_Item_or_No_Order__c</fullName>
        <description>Rollup field to get the count of ORC where No Order is received or with Missing Items.</description>
        <label>ORC Missing Item or No Order</label>
        <summaryFilterItems>
            <field>Order_Refund_Credit__c.Reason__c</field>
            <operation>equals</operation>
            <value>Missing Items, Order Not Received</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Refund_Credit__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ORC_POS_Gift_Card_Saks_O5__c</fullName>
        <description>Used to roll up the number of open ORC&apos;s for Saks and off 5th that should route to a gift card queue</description>
        <label>ORC POS Gift Card Saks/O5</label>
        <summaryFilterItems>
            <field>Order_Refund_Credit__c.ORC_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Order_Refund_Credit__c.Reason__c</field>
            <operation>equals</operation>
            <value>Gift Card (Appeasement), Gift Card (Refund), Promo Code Gift Card, EGC to Account</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Order_Refund_Credit__c.Type_of_Gift_Card__c</field>
            <operation>notEqual</operation>
            <value>Virtual</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Refund_Credit__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ORC_Requiring_Approval_Count__c</fullName>
        <description>Number of ORC that require approval. Used in validation and submit ORC button</description>
        <label>ORC Requiring Approval Count</label>
        <summaryFilterItems>
            <field>Order_Refund_Credit__c.Approval_Required__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Refund_Credit__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ORC_Saks_O5_MNR_Review__c</fullName>
        <description>Used to roll up the amount of Saks and O5 ORC&apos;s for MNR review</description>
        <label>ORC Saks O5 MNR Review</label>
        <summaryFilterItems>
            <field>Order_Refund_Credit__c.Reason__c</field>
            <operation>equals</operation>
            <value>Order Not Received, Missing Items</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Order_Refund_Credit__c.ORC_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed, Cancelled, Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Refund_Credit__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ORC_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ORC Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ORC_Value__c</fullName>
        <description>Value of all the ORC on the case</description>
        <label>ORC Value</label>
        <summarizedField>Order_Refund_Credit__c.Amount_to_Refund__c</summarizedField>
        <summaryForeignKey>Order_Refund_Credit__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ORC_Virtual_Gift_Card_Queue__c</fullName>
        <description>Used to determine which Gift Card appeasements must go to the team lead queue</description>
        <label>ORC Virtual Gift Card Queue</label>
        <summaryFilterItems>
            <field>Order_Refund_Credit__c.Reason__c</field>
            <operation>equals</operation>
            <value>Gift Card (Appeasement)</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Order_Refund_Credit__c.Type_of_Gift_Card__c</field>
            <operation>equals</operation>
            <value>Virtual</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Order_Refund_Credit__c.Business_Unit__c</field>
            <operation>equals</operation>
            <value>Off 5th</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Order_Refund_Credit__c.ORC_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed, Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Refund_Credit__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Open_ORC__c</fullName>
        <description>Number of open ORC. Used in ORC validations</description>
        <label>Open ORC</label>
        <summaryFilterItems>
            <field>Order_Refund_Credit__c.ORC_Status__c</field>
            <operation>equals</operation>
            <value>In Progress, Requires Approval, Approved, New</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Refund_Credit__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Order_Billing_Postal_Code__c</fullName>
        <description>Used in Narvar</description>
        <inlineHelpText>Used in Narvar</inlineHelpText>
        <label>Order Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <description>Date the order was places. Filled by trigger. Used in Flow</description>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Revenue__c</fullName>
        <description>Stamped via data connection on New Order creation</description>
        <label>Order Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_is_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that indicates if an order was cancelled during the case. The statement will evaluate true based on the Cancel order action.</description>
        <inlineHelpText>Checkbox that indicates if an order was cancelled during the case. The statement will evaluate true based on the Cancel order action.</inlineHelpText>
        <label>Order is Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Origin_Is_Chat__c</fullName>
        <label>Origin Is Chat</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_When_First_Closed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The agent who owned the case when it was closed the first time</description>
        <label>Owner When First Closed</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>